--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
 ---
 server:
   port: 8081
+  servlet:
+    context-path: /user
 
 logging:
   level:
@@ -42,7 +44,9 @@ minio:
 ---
 server:
   port: 8080
-
+  servlet:
+    context-path: /user
+    
 logging:
   level:
     yongs:
