--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
-	implementation 'io.minio:minio:8.3.6'
+	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.4'
 	// for io.minio
+	implementation 'io.minio:minio:8.3.6'
 	implementation 'com.squareup.okhttp3:okhttp:4.9.1' 	
 	
 	compileOnly 'org.projectlombok:lombok'
